--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "P3 Genome Report Protoype",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "./node_modules/live-server/live-server.js  --entry-file=/templates/gr-template.html"
   },
   "repository": {
     "type": "git",
@@ -23,5 +24,8 @@
     "puppeteer": "1.1.1",
     "request": "2.83.0",
     "request-promise": "4.2.2"
+  },
+  "devDependencies": {
+    "live-server": "1.2.0"
   }
 }
