--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/nconrad/genome-report#readme",
   "dependencies": {
+    "cheerio": "1.0.0-rc.2",
     "commander": "2.14.1",
     "convert-svg-to-png": "0.4.0",
     "mustache": "2.3.0",
