--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "genome-report",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "P3 Genome Report Protoype",
   "main": "index.js",
   "scripts": {
@@ -22,9 +22,10 @@
     "cheerio": "1.0.0-rc.2",
     "commander": "2.14.1",
     "convert-svg-to-png": "0.4.0",
+    "d3": "5.0.0",
     "handlebars": "4.0.11",
     "handlebars-helpers": "0.10.0",
-    "mustache": "2.3.0",
+    "jsdom": "11.6.2",
     "puppeteer": "1.1.1",
     "request": "2.83.0",
     "request-promise": "4.2.2"
