--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "handlebars": "4.0.11",
     "handlebars-helpers": "0.10.0",
     "jsdom": "11.6.2",
+    "moment": "2.22.0",
     "puppeteer": "1.1.1"
   },
   "devDependencies": {
