--- a/config.json
+++ b/config.json
@@ -2,5 +2,6 @@
     "reportDir": "reports/",
     "dataAPIUrl": "https://p3.theseed.org/services/data_api",
     "wikiUrl": "https://en.wikipedia.org/w/api.php",
-    "templatePath": "templates/gr-template.html"
+    "templatePath": "templates/gr-template.html",
+    "referencesPath": "templates/references.json"
 }
