--- a/package.json
+++ b/package.json
@@ -22,15 +22,15 @@
     "axios": "0.18.0",
     "cheerio": "1.0.0-rc.2",
     "commander": "2.14.1",
-    "convert-svg-to-png": "0.4.0",
     "d3": "5.0.0",
     "handlebars": "4.0.11",
     "handlebars-helpers": "0.10.0",
     "jsdom": "11.6.2",
-    "moment": "2.22.0",
-    "puppeteer": "1.1.1"
+    "moment": "2.22.0"
   },
   "devDependencies": {
-    "live-server": "1.2.0"
+    "live-server": "1.2.0",
+    "puppeteer": "1.1.1",
+    "convert-svg-to-png": "0.4.0"
   }
 }
