--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "./node_modules/live-server/live-server.js",
-    "start:dev": "./node_modules/live-server/live-server.js  --entry-file=/templates/gr-template.html"
+    "start:dev": "./node_modules/live-server/live-server.js  --entry-file=/templates/gr-template.html",
+    "build": "./test/build-reports.sh"
   },
   "repository": {
     "type": "git",
