--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
   },
   "homepage": "https://github.com/PATRIC3/genome_report#readme",
   "dependencies": {
-    "axios": "0.18.0",
+    "axios": "^0.21.1",
     "cheerio": "1.0.0-rc.2",
     "commander": "2.14.1",
     "d3": "5.0.0",
-    "handlebars": "4.1.2",
+    "handlebars": "^4.7.6",
     "handlebars-helpers": "0.10.0",
     "jsdom": "15.0.0",
     "moment": "2.22.0"
